some design / layout / usability changes

--- a/html/index.html
+++ b/html/index.html
@@ -54,9 +54,9 @@
                             <div class="btn-group">
                                 <a class="btn btn-default btn-xs gdt dropdown-toggle" dropdown-toggle>&nbsp;</a>
 
-                                <a class="btn btn-default btn-xs new-treatment"
+                                <a class="btn btn-default btn-xs new-treatment" title="Neue Behandlung"
                                    ng-click="dc.addTreatment(vm.treatments)">&nbsp;</a>
-                                <a class="btn btn-default btn-xs new-treatment-dialog" href="{{vm.baseUrl}}treatment/">
+                                <a class="btn btn-default btn-xs new-treatment-dialog" title="" href="{{vm.baseUrl}}treatment/">
                                     &nbsp;</a>
                                 <a class="btn btn-default btn-xs biometric-report"
                                    ng-click="dc.openBiometricReport(vm.process)">&nbsp;</a>
