--- a/html/index.html
+++ b/html/index.html
@@ -15,12 +15,14 @@
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">-->
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../bower_components/select2/select2.css">
+    <link rel='stylesheet' href='../bower_components/textAngular/src/textAngular.css'>
     <link rel="stylesheet" href="../css/select2-bootstrap.css">
     <link rel="stylesheet" href="../css/custom.css">
     <link rel="stylesheet" href="../config/config.css">
 
     <!--<link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">-->
     <link rel="stylesheet" href="../bower_components/css-spinners/css/spinner/spinner.css" type="text/css">
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -94,12 +96,22 @@
 
                             <a class="btn btn-default btn-xs dropdown-toggle" dropdown-toggle><i class="fa fa-cogs"></i></a>
                             <ul class="dropdown-menu dropdown-menu-right">
-                                <li><a ng-click="marginSetting='large-margins'" href><span class="checkmark"><i class="fa fa-check" ng-show="marginSetting=='large-margins'">&nbsp;</i></span> Grosse Abstände</a></li>
-                                <li><a ng-click="marginSetting='small-margins'" href><span class="checkmark"><i class="fa fa-check" ng-show="marginSetting=='small-margins' || !marginSetting">&nbsp;</i></span> Kleine Abstände</a></li>
+                                <li><a ng-click="marginSetting='large-margins'" href><span class="checkmark"><i
+                                        class="fa fa-check" ng-show="marginSetting=='large-margins'">&nbsp;</i></span>
+                                    Grosse Abstände</a></li>
+                                <li><a ng-click="marginSetting='small-margins'" href><span class="checkmark"><i
+                                        class="fa fa-check" ng-show="marginSetting=='small-margins' || !marginSetting">
+                                    &nbsp;</i></span> Kleine Abstände</a></li>
                                 <li role="presentation" class="divider"></li>
-                                <li><a ng-click="fontSetting='small-fonts'" href><span class="checkmark"><i class="fa fa-check" ng-show="fontSetting=='small-fonts'">&nbsp;</i></span> Kleine Schrift</a></li>
-                                <li><a ng-click="fontSetting='medium-fonts'" href><span class="checkmark"><i class="fa fa-check" ng-show="fontSetting=='medium-fonts' || !fontSetting">&nbsp;</i></span> Mittlere Schrift</a></li>
-                                <li><a ng-click="fontSetting='large-fonts'" href><span class="checkmark"><i class="fa fa-check" ng-show="fontSetting=='large-fonts'">&nbsp;</i></span> Grosse Schrift</a></li>
+                                <li><a ng-click="fontSetting='small-fonts'" href><span class="checkmark"><i
+                                        class="fa fa-check" ng-show="fontSetting=='small-fonts'">&nbsp;</i></span>
+                                    Kleine Schrift</a></li>
+                                <li><a ng-click="fontSetting='medium-fonts'" href><span class="checkmark"><i
+                                        class="fa fa-check" ng-show="fontSetting=='medium-fonts' || !fontSetting">
+                                    &nbsp;</i></span> Mittlere Schrift</a></li>
+                                <li><a ng-click="fontSetting='large-fonts'" href><span class="checkmark"><i
+                                        class="fa fa-check" ng-show="fontSetting=='large-fonts'">&nbsp;</i></span>
+                                    Grosse Schrift</a></li>
                             </ul>
                         </div>
                     </div>
@@ -108,7 +120,8 @@
         </div>
     </div>
 
-    <treatment treatment="treatment" editable="{{$index<3}}" ng-repeat="treatment in vm.treatments | orderBy:[(vm.reverse?'':'-')+'date', 'id']"
+    <treatment treatment="treatment" editable="{{$index<3}}"
+               ng-repeat="treatment in vm.treatments | orderBy:[(vm.reverse?'':'-')+'date', 'id']"
                treatmentlist="vm.treatments"></treatment>
 </div>
 
@@ -130,6 +143,9 @@
 <script type="text/javascript" src="../bower_components/angular-elastic/elastic.js"></script>
 <script type="text/javascript" src="../bower_components/wysihtml/dist/wysihtml5x-toolbar.min.js"></script>
 <script type="text/javascript" src="../bower_components/wysihtml/parser_rules/advanced_and_extended.js"></script>
+<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular-rangy.min.js'></script>
+<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular-sanitize.min.js'></script>
+<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular.min.js'></script>
 <script type="text/javascript" src="../js/achilles.js"></script>
 <script type="text/javascript" src="../js/controllers/main.controller.js"></script>
 <script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>
@@ -140,6 +156,7 @@
 <script type="text/javascript" src="../js/directives/modal-select2.directive.js"></script>
 <script type="text/javascript" src="../js/directives/toggle-focus.directive.js"></script>
 <script type="text/javascript" src="../js/directives/treatment-toolbar.directive.js"></script>
+<script type="text/javascript" src="../js/directives/wysihtml.directive.js"></script>
 <script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/entry-type.service.js"></script>
 <script type="text/javascript" src="../js/services/treatment.service.js"></script>
@@ -149,6 +166,7 @@
 <script type="text/javascript" src="../js/services/disability.service.js"></script>
 <script type="text/javascript" src="../js/services/laboratory.service.js"></script>
 <script type="text/javascript" src="../js/config/spinner.config.js"></script>
+<script type="text/javascript" src="../js/config/textAngular.config.js"></script>
 <script type="text/javascript" src="../js/independent.js"></script>
 
 </body>
