--- a/html/index.html
+++ b/html/index.html
@@ -69,7 +69,7 @@
                                 <a class="btn btn-default btn-xs treatment-report"
                                    ng-click="dc.openTreatmentReport(vm.process, vm.treatments)">&nbsp;</a>
                                 <a class="btn btn-default btn-xs search"
-                                   ng-click="dc.asteriskSearch()">&nbsp;</a>
+                                   ng-click="dc.asteriskSearch(vm.treatments)">&nbsp;</a>
                                 <a class="btn btn-default btn-xs sort"
                                    ng-click="vm.reverse=!vm.reverse">&nbsp;</a>
                             </div>
@@ -167,6 +167,7 @@
 <script type="text/javascript" src="../js/services/biometric.service.js"></script>
 <script type="text/javascript" src="../js/services/disability.service.js"></script>
 <script type="text/javascript" src="../js/services/laboratory.service.js"></script>
+<script type="text/javascript" src="../js/services/current-focus.service.js"></script>
 <script type="text/javascript" src="../js/config/spinner.config.js"></script>
 <script type="text/javascript" src="../js/config/textAngular.config.js"></script>
 <script type="text/javascript" src="../js/independent.js"></script>
