added checking for the lock of a row

--- a/html/index.html
+++ b/html/index.html
@@ -168,6 +168,7 @@
 <script type="text/javascript" src="../js/services/disability.service.js"></script>
 <script type="text/javascript" src="../js/services/laboratory.service.js"></script>
 <script type="text/javascript" src="../js/services/current-focus.service.js"></script>
+<script type="text/javascript" src="../js/services/locking.service.js"></script>
 <script type="text/javascript" src="../js/config/spinner.config.js"></script>
 <script type="text/javascript" src="../js/config/textAngular.config.js"></script>
 <script type="text/javascript" src="../js/independent.js"></script>
