--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../bower_components/select2/select2.css">
     <link rel='stylesheet' href='../bower_components/textAngular/src/textAngular.css'>
+    <link rel='stylesheet' href='../bower_components/toastr/toastr.css'>
     <link rel="stylesheet" href="../css/select2-bootstrap.css">
     <link rel="stylesheet" href="../css/custom.css">
     <link rel="stylesheet" href="../config/config.css">
@@ -122,8 +123,10 @@
     </div>
 
     <treatment treatment="treatment" editable="{{$index<5}}"
+               permission-to-edit="{{vm.checkEditPermission(vm.user, treatment)}}"
+               warning="{{vm.shouldBeWarned(vm.user, treatment)}}"
                ng-repeat="treatment in vm.treatments | orderBy:[(vm.reverse?'':'-')+'date', 'id']"
-               treatmentlist="vm.treatments" user="vm.user"></treatment>
+               treatmentlist="vm.treatments" user="vm.user" now="vm.now"></treatment>
 </div>
 
 <!-- Placed at the end of the document so the pages load faster -->
@@ -146,6 +149,7 @@
 <script type="text/javascript" src='../bower_components/textAngular/dist/textAngular-rangy.min.js'></script>
 <script type="text/javascript" src='../bower_components/textAngular/dist/textAngular-sanitize.min.js'></script>
 <script type="text/javascript" src='../bower_components/textAngular/dist/textAngular.min.js'></script>
+<script type="text/javascript" src='../bower_components/toastr/toastr.js'></script>
 <script type="text/javascript" src="../js/achilles.js"></script>
 <script type="text/javascript" src="../js/controllers/main.controller.js"></script>
 <script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>
@@ -167,6 +171,7 @@
 <script type="text/javascript" src="../js/services/current-focus.service.js"></script>
 <script type="text/javascript" src="../js/services/locking.service.js"></script>
 <script type="text/javascript" src="../js/services/user.service.js"></script>
+<script type="text/javascript" src="../js/services/treatment-permission.service.js"></script>
 <script type="text/javascript" src="../js/config/spinner.config.js"></script>
 <script type="text/javascript" src="../js/config/textAngular.config.js"></script>
 <script type="text/javascript" src="../js/independent.js"></script>
