--- a/html/index.html
+++ b/html/index.html
@@ -124,9 +124,8 @@
 
     <treatment treatment="treatment" editable="{{$index<5}}"
                permission-to-edit="{{vm.checkEditPermission(vm.user, treatment)}}"
-               warning="{{vm.shouldBeWarned(vm.user, treatment)}}"
                ng-repeat="treatment in vm.treatments | orderBy:[(vm.reverse?'':'-')+'date', 'id']"
-               treatmentlist="vm.treatments" user="vm.user" now="vm.now"></treatment>
+               treatmentlist="vm.treatments" user="vm.user"></treatment>
 </div>
 
 <!-- Placed at the end of the document so the pages load faster -->
