--- a/html/index.html
+++ b/html/index.html
@@ -134,50 +134,53 @@
 
 <!-- Placed at the end of the document so the pages load faster -->
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="../config/config.js"></script>
-<script src="../bower_components/jquery/dist/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>-->
-<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>-->
-<script type="text/javascript" src="../bower_components/angular/angular.js"></script>
-<script type="text/javascript" src="../bower_components/angular-resource/angular-resource.js"></script>
-<script type="text/javascript" src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
-<script type="text/javascript" src="../bower_components/ngLocale/angular-locale_de-ch.js"></script>
-<script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap.js"></script>
-<script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-<script type="text/javascript" src="../bower_components/select2/select2.min.js"></script>
-<script type="text/javascript" src="../bower_components/angular-select2/dist/angular-select2.min.js"></script>
-<script type="text/javascript" src="../bower_components/angular-elastic/elastic.js"></script>
-<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular-rangy.min.js'></script>
-<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular-sanitize.min.js'></script>
-<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular.min.js'></script>
-<script type="text/javascript" src='../bower_components/toastr/toastr.js'></script>
-<script type="text/javascript" src="../js/achilles.js"></script>
-<script type="text/javascript" src="../js/controllers/main.controller.js"></script>
-<script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>
-<script type="text/javascript" src="../js/directives/treatment.directive.js"></script>
-<script type="text/javascript" src="../js/directives/treatment-entry.directive.js"></script>
-<script type="text/javascript" src="../js/directives/treatment-row.directive.js"></script>
-<script type="text/javascript" src="../js/directives/treatment-column.directive.js"></script>
-<script type="text/javascript" src="../js/directives/modal-select2.directive.js"></script>
-<script type="text/javascript" src="../js/directives/toggle-focus.directive.js"></script>
-<script type="text/javascript" src="../js/directives/treatment-toolbar.directive.js"></script>
-<script type="text/javascript" src="../js/services/url.service.js"></script>
-<script type="text/javascript" src="../js/services/entry-type.service.js"></script>
-<script type="text/javascript" src="../js/services/treatment.service.js"></script>
-<script type="text/javascript" src="../js/services/subject.service.js"></script>
-<script type="text/javascript" src="../js/services/document.service.js"></script>
-<script type="text/javascript" src="../js/services/biometric.service.js"></script>
-<script type="text/javascript" src="../js/services/disability.service.js"></script>
-<script type="text/javascript" src="../js/services/laboratory.service.js"></script>
-<script type="text/javascript" src="../js/services/current-focus.service.js"></script>
-<script type="text/javascript" src="../js/services/locking.service.js"></script>
-<script type="text/javascript" src="../js/services/user.service.js"></script>
-<script type="text/javascript" src="../js/services/treatment-permission.service.js"></script>
-<script type="text/javascript" src="../js/config/spinner.config.js"></script>
-<script type="text/javascript" src="../js/config/textAngular.config.js"></script>
-<script type="text/javascript" src="../js/independent.js"></script>
+<!--<script src="../config/config.js"></script>-->
+<!--<script src="../bower_components/jquery/dist/jquery.min.js"></script>-->
+<script type="text/javascript" src='../build/app.min.js'></script>
+<!--&lt;!&ndash; Include all compiled plugins (below), or include individual files as needed &ndash;&gt;-->
+<!--&lt;!&ndash;<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>&ndash;&gt;-->
+<!--<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>-->
+<!--&lt;!&ndash;<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>&ndash;&gt;-->
+<!--<script type="text/javascript" src="../bower_components/angular/angular.js"></script>-->
+<!--<script type="text/javascript" src="../bower_components/angular-resource/angular-resource.js"></script>-->
+<!--<script type="text/javascript" src="../bower_components/angular-sanitize/angular-sanitize.js"></script>-->
+<!--<script type="text/javascript" src="../bower_components/ngLocale/angular-locale_de-ch.js"></script>-->
+<!--<script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap.js"></script>-->
+<!--<script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>-->
+<!--<script type="text/javascript" src="../bower_components/select2/select2.min.js"></script>-->
+<!--<script type="text/javascript" src="../bower_components/angular-select2/dist/angular-select2.min.js"></script>-->
+<!--<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular-rangy.min.js'></script>-->
+<!--<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular-sanitize.min.js'></script>-->
+<!--<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular.min.js'></script>-->
+<!--<script type="text/javascript" src='../bower_components/toastr/toastr.js'></script>-->
+<!--<script type="text/javascript" src="../js/achilles.js"></script>-->
+<!--<script type="text/javascript" src="../js/controllers/main.controller.js"></script>-->
+<!--<script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>-->
+<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/treatment.directive.js"></script>&ndash;&gt;-->
+<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/treatment-entry.directive.js"></script>&ndash;&gt;-->
+<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/treatment-row.directive.js"></script>&ndash;&gt;-->
+<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/treatment-column.directive.js"></script>&ndash;&gt;-->
+<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/modal-select2.directive.js"></script>&ndash;&gt;-->
+<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/toggle-focus.directive.js"></script>&ndash;&gt;-->
+<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/treatment-toolbar.directive.js"></script>&ndash;&gt;-->
+<!--<script type="text/javascript" src="../js/services/url.service.js"></script>-->
+<!--<script type="text/javascript" src="../js/services/entry-type.service.js"></script>-->
+<!--<script type="text/javascript" src="../js/services/treatment.service.js"></script>-->
+<!--<script type="text/javascript" src="../js/services/subject.service.js"></script>-->
+<!--<script type="text/javascript" src="../js/services/document.service.js"></script>-->
+<!--<script type="text/javascript" src="../js/services/biometric.service.js"></script>-->
+<!--<script type="text/javascript" src="../js/services/disability.service.js"></script>-->
+<!--<script type="text/javascript" src="../js/services/laboratory.service.js"></script>-->
+<!--<script type="text/javascript" src="../js/services/current-focus.service.js"></script>-->
+<!--<script type="text/javascript" src="../js/services/locking.service.js"></script>-->
+<!--<script type="text/javascript" src="../js/services/user.service.js"></script>-->
+<!--<script type="text/javascript" src="../js/services/treatment-permission.service.js"></script>-->
+<!--<script type="text/javascript" src="../js/config/spinner.config.js"></script>-->
+<!--<script type="text/javascript" src="../js/config/textAngular.config.js"></script>-->
+<!--<script type="text/javascript" src="../js/independent.js"></script>-->
+
+
+
 
 </body>
 </html>
