--- a/html/index.html
+++ b/html/index.html
@@ -5,14 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>ngAchilles - Proof of Concept</title>
+    <title>ngAchilles - Behandlung</title>
 
     <!-- Latest compiled and minified CSS -->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">-->
     <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <!--<link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css">-->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">-->
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">-->
     <link rel="stylesheet" href="../bower_components/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="../bower_components/select2/select2.css">
     <link rel='stylesheet' href='../bower_components/textAngular/src/textAngular.css'>
@@ -20,8 +16,6 @@
     <link rel="stylesheet" href="../css/select2-bootstrap.css">
     <link rel="stylesheet" href="../css/custom.css">
     <link rel="stylesheet" href="../config/config.css">
-
-    <!--<link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">-->
     <link rel="stylesheet" href="../bower_components/css-spinners/css/spinner/spinner.css" type="text/css">
 
 
@@ -119,11 +113,28 @@
                                 <li><a ng-click="fontSetting='large-fonts'" href><span class="checkmark"><i
                                         class="fa fa-check" ng-show="fontSetting=='large-fonts'">&nbsp;</i></span>
                                     Grosse Schrift</a></li>
+                                <li class="divider"></li>
+                                <li><a ng-click="">Titel zeigen</a></li>
                             </ul>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+
+    <div class="title-settings-widget">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <p>This is some text</p>
+            </div>
+
+            <ul class="list-group">
+                <li class="list-group-item">Some</li>
+                <li class="list-group-item">Thing</li>
+                <li class="list-group-item">Else</li>
+            </ul>
+
         </div>
     </div>
 
@@ -134,24 +145,30 @@
 
 <!-- Placed at the end of the document so the pages load faster -->
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<!--<script src="../config/config.js"></script>-->
+<script src="../config/config.js"></script>
+
 <!--<script src="../bower_components/jquery/dist/jquery.min.js"></script>-->
+
 <script type="text/javascript" src='../build/app.min.js'></script>
+<!--<script type="text/javascript" src='../build/vendor.min.js'></script>-->
+<!--<script type="text/javascript" src='../build/achilles.min.js'></script>-->
+
 <!--&lt;!&ndash; Include all compiled plugins (below), or include individual files as needed &ndash;&gt;-->
-<!--&lt;!&ndash;<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>&ndash;&gt;-->
-<!--<script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>-->
-<!--&lt;!&ndash;<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>&ndash;&gt;-->
 <!--<script type="text/javascript" src="../bower_components/angular/angular.js"></script>-->
 <!--<script type="text/javascript" src="../bower_components/angular-resource/angular-resource.js"></script>-->
 <!--<script type="text/javascript" src="../bower_components/angular-sanitize/angular-sanitize.js"></script>-->
 <!--<script type="text/javascript" src="../bower_components/ngLocale/angular-locale_de-ch.js"></script>-->
 <!--<script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap.js"></script>-->
 <!--<script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>-->
-<!--<script type="text/javascript" src="../bower_components/select2/select2.min.js"></script>-->
+
+<!--<script type="text/javascript" src="../bower_components/select2/select2.js"></script>-->
+<!--<script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>-->
+
 <!--<script type="text/javascript" src="../bower_components/angular-select2/dist/angular-select2.min.js"></script>-->
 <!--<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular-rangy.min.js'></script>-->
 <!--<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular-sanitize.min.js'></script>-->
 <!--<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular.min.js'></script>-->
+
 <!--<script type="text/javascript" src='../bower_components/toastr/toastr.js'></script>-->
 <!--<script type="text/javascript" src="../js/achilles.js"></script>-->
 <!--<script type="text/javascript" src="../js/controllers/main.controller.js"></script>-->
