--- a/html/index.html
+++ b/html/index.html
@@ -35,114 +35,9 @@
     </div>
 </div>
 <div class="container-fluid" ng-class="[marginSetting, fontSetting]" ng-controller="MainController as vm">
-    <div class="toolbar-wrapper" ng-show="vm.treatments.length">
-        <div class="toolbar" ng-class="'mandator-' + vm.user.mandator.id + '-toolbar'" treatment-toolbar ng-cloak>
-            <div class="row">
-                <div class="col-xs-3">
-                    <p ng-show="vm.treatments.length">Behandlungseinträge</p>
-                </div>
-                <div class="col-xs-2">
-                    <p ng-show="vm.treatments.length"
-                       ng-bind="vm.treatments.length + ' von ' + vm.treatments.length"></p>
-                </div>
-                <div class="col-xs-2">
-                    <div class="form-group">
-                        <input class="form-control" ng-model="vm.search" placeholder="Suche">
-                    </div>
-                </div>
-                <div class="col-xs-4">
-                    <div class="btn-toolbar pull-right">
-                        <div class="dropdown icon-dropdown" toggle-focus dropdown>
+    <treatment-toolbar></treatment-toolbar>
 
-                            <div class="btn-group">
-                                <a ng-if="vm.user.hasGDTDevice" class="btn btn-default btn-xs gdt dropdown-toggle"
-                                   dropdown-toggle>&nbsp;</a>
-
-                                <a class="btn btn-default btn-xs new-treatment" title="Neue Behandlung"
-                                   ng-click="dc.addTreatment(vm.treatments)">&nbsp;</a>
-                                <a class="btn btn-default btn-xs new-treatment-dialog" title=""
-                                   href="{{vm.baseUrl}}treatment/">
-                                    &nbsp;</a>
-                                <a class="btn btn-default btn-xs biometric-report"
-                                   ng-click="dc.openBiometricReport(vm.process)">&nbsp;</a>
-                                <a class="btn btn-default btn-xs laboratory-report"
-                                   ng-click="dc.openLaboratoryReport(vm.process)">&nbsp;</a>
-                                <a class="btn btn-default btn-xs treatment-report"
-                                   ng-click="dc.openTreatmentReport(vm.process, vm.treatments)">&nbsp;</a>
-                                <a class="btn btn-default btn-xs search"
-                                   ng-click="dc.asteriskSearch(vm.treatments)">&nbsp;</a>
-                                <a class="btn btn-default btn-xs sort"
-                                   ng-click="vm.reverse=!vm.reverse">&nbsp;</a>
-                            </div>
-
-                            <div class="btn-group">
-                                <a class="btn btn-default btn-xs appointment" href="{{vm.baseUrl}}appointment/">
-                                    &nbsp;</a>
-                                <a class="btn btn-default btn-xs recall" href="{{vm.baseUrl}}recall/">&nbsp;</a>
-                                <a class="btn btn-default btn-xs todo" href="{{vm.baseUrl}}todo/">&nbsp;</a>
-                            </div>
-                            <div class="btn-group">
-                                <a class="btn btn-default btn-xs refresh" ng-click="vm.loadEntries()">&nbsp;</a>
-                            </div>
-                            <ul class="dropdown-menu gdt-list">
-                                <li ng-repeat-start="device in dc.gdtDevices"><a href
-                                                                                 ng-click="dc.executeGDT(device, vm.patient)"><strong>{{device.name}}</strong></a>
-                                </li>
-                                <li ng-repeat="test in device.gdtTests"><a href
-                                                                           ng-click="dc.executeGDT(device, vm.patient, test)">{{test.name}}</a>
-                                </li>
-                                <li ng-repeat-end class="divider"></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xs-1">
-                    <div class="btn-group pull-right">
-                        <div class="dropdown" toggle-focus dropdown>
-
-                            <a class="btn btn-default btn-xs dropdown-toggle" dropdown-toggle><i class="fa fa-cogs"></i></a>
-                            <ul class="dropdown-menu dropdown-menu-right">
-                                <li><a ng-click="marginSetting='large-margins'" href><span class="checkmark"><i
-                                        class="fa fa-check" ng-show="marginSetting=='large-margins'">&nbsp;</i></span>
-                                    Grosse Abstände</a></li>
-                                <li><a ng-click="marginSetting='small-margins'" href><span class="checkmark"><i
-                                        class="fa fa-check" ng-show="marginSetting=='small-margins' || !marginSetting">
-                                    &nbsp;</i></span> Kleine Abstände</a></li>
-                                <li role="presentation" class="divider"></li>
-                                <li><a ng-click="fontSetting='small-fonts'" href><span class="checkmark"><i
-                                        class="fa fa-check" ng-show="fontSetting=='small-fonts'">&nbsp;</i></span>
-                                    Kleine Schrift</a></li>
-                                <li><a ng-click="fontSetting='medium-fonts'" href><span class="checkmark"><i
-                                        class="fa fa-check" ng-show="fontSetting=='medium-fonts' || !fontSetting">
-                                    &nbsp;</i></span> Mittlere Schrift</a></li>
-                                <li><a ng-click="fontSetting='large-fonts'" href><span class="checkmark"><i
-                                        class="fa fa-check" ng-show="fontSetting=='large-fonts'">&nbsp;</i></span>
-                                    Grosse Schrift</a></li>
-                                <li class="divider"></li>
-                                <li><a ng-click="vm.showTitleSettingsWidget=true">Titel zeigen</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="title-settings-widget" title-settings-widget ng-show="vm.showTitleSettingsWidget" ng-cloak>
-        <a class="btn btn-default close-widget" ng-click="vm.showTitleSettingsWidget = false"><i class="fa fa-check">&nbsp;</i></a>
-        <div class="panel panel-default">
-            <div class="panel-body">
-                <p>This is some text</p>
-            </div>
-
-            <div class="list-group">
-                <a class="list-group-item" ng-click="dc.changeTypeStatus(type)" ng-repeat="type in dc.entryTypes | orderBy:'name'" href>
-                    <span class="checkmark"><i class="fa fa-check" ng-hide="type.hidden">&nbsp;</i></span> {{type.name}}
-                </a>
-            </div>
-
-        </div>
-    </div>
+    <title-settings-widget></title-settings-widget>
 
     <treatment treatment="treatment" editable="{{$index<5}}"
                ng-repeat="treatment in vm.treatments | filter:vm.search | orderBy:[(vm.reverse?'':'-')+'date', 'id']"
@@ -150,61 +45,8 @@
 </div>
 
 <!-- Placed at the end of the document so the pages load faster -->
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="../config/config.js"></script>
-
-<!--<script src="../bower_components/jquery/dist/jquery.min.js"></script>-->
-
 <script type="text/javascript" src='../build/app.min.js'></script>
-<!--<script type="text/javascript" src='../build/vendor.min.js'></script>-->
-<!--<script type="text/javascript" src='../build/achilles.min.js'></script>-->
-
-<!--&lt;!&ndash; Include all compiled plugins (below), or include individual files as needed &ndash;&gt;-->
-<!--<script type="text/javascript" src="../bower_components/angular/angular.js"></script>-->
-<!--<script type="text/javascript" src="../bower_components/angular-resource/angular-resource.js"></script>-->
-<!--<script type="text/javascript" src="../bower_components/angular-sanitize/angular-sanitize.js"></script>-->
-<!--<script type="text/javascript" src="../bower_components/ngLocale/angular-locale_de-ch.js"></script>-->
-<!--<script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap.js"></script>-->
-<!--<script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>-->
-
-<!--<script type="text/javascript" src="../bower_components/select2/select2.js"></script>-->
-<!--<script src="../bower_components/bootstrap/dist/js/bootstrap.js"></script>-->
-
-<!--<script type="text/javascript" src="../bower_components/angular-select2/dist/angular-select2.min.js"></script>-->
-<!--<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular-rangy.min.js'></script>-->
-<!--<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular-sanitize.min.js'></script>-->
-<!--<script type="text/javascript" src='../bower_components/textAngular/dist/textAngular.min.js'></script>-->
-
-<!--<script type="text/javascript" src='../bower_components/toastr/toastr.js'></script>-->
-<!--<script type="text/javascript" src="../js/achilles.js"></script>-->
-<!--<script type="text/javascript" src="../js/controllers/main.controller.js"></script>-->
-<!--<script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>-->
-<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/treatment.directive.js"></script>&ndash;&gt;-->
-<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/treatment-entry.directive.js"></script>&ndash;&gt;
--->
-<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/treatment-row.directive.js"></script>&ndash;&gt;-->
-<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/treatment-column.directive.js"></script>&ndash;&gt;
--->
-<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/modal-select2.directive.js"></script>&ndash;&gt;-->
-<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/toggle-focus.directive.js"></script>&ndash;&gt;-->
-<!--&lt;!&ndash;<script type="text/javascript" src="../js/directives/treatment-toolbar.directive.js"></script>&ndash;&gt;
--->
-<!--<script type="text/javascript" src="../js/services/url.service.js"></script>-->
-<!--<script type="text/javascript" src="../js/services/entry-type.service.js"></script>-->
-<!--<script type="text/javascript" src="../js/services/treatment.service.js"></script>-->
-<!--<script type="text/javascript" src="../js/services/subject.service.js"></script>-->
-<!--<script type="text/javascript" src="../js/services/document.service.js"></script>-->
-<!--<script type="text/javascript" src="../js/services/biometric.service.js"></script>-->
-<!--<script type="text/javascript" src="../js/services/disability.service.js"></script>-->
-<!--<script type="text/javascript" src="../js/services/laboratory.service.js"></script>-->
-<!--<script type="text/javascript" src="../js/services/current-focus.service.js"></script>-->
-<!--<script type="text/javascript" src="../js/services/locking.service.js"></script>-->
-<!--<script type="text/javascript" src="../js/services/user.service.js"></script>-->
-<!--<script type="text/javascript" src="../js/services/treatment-permission.service.js"></script>-->
-<!--<script type="text/javascript" src="../js/config/spinner.config.js"></script>-->
-<!--<script type="text/javascript" src="../js/config/textAngular.config.js"></script>-->
-<!--<script type="text/javascript" src="../js/independent.js"></script>-->
-
 
 </body>
 </html>
