--- a/dev/index.html
+++ b/dev/index.html
@@ -39,6 +39,8 @@
 
     <title-settings-widget></title-settings-widget>
 
+    <fixtext-widget></fixtext-widget>
+
     <treatment treatment="treatment" editable="{{$index<5}}"
                ng-repeat="treatment in vm.treatments | filter:vm.search | orderBy:[(vm.reverse?'':'-')+'date', 'id']"
                treatmentlist="vm.treatments" user="vm.user"></treatment>
@@ -68,9 +70,12 @@
 
 <script type="text/javascript" src="../bower_components/jquery-ui/jquery-ui.js"></script>
 <script type="text/javascript" src='../bower_components/toastr/toastr.js'></script>
+
 <script type="text/javascript" src="../js/achilles.js"></script>
+
 <script type="text/javascript" src="../js/controllers/main.controller.js"></script>
 <script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>
+
 <script type="text/javascript" src="../js/directives/treatment.directive.js"></script>
 <script type="text/javascript" src="../js/directives/treatment-entry.directive.js"></script>
 <script type="text/javascript" src="../js/directives/treatment-row.directive.js"></script>
@@ -79,6 +84,9 @@
 <script type="text/javascript" src="../js/directives/toggle-focus.directive.js"></script>
 <script type="text/javascript" src="../js/directives/treatment-toolbar.directive.js"></script>
 <script type="text/javascript" src="../js/directives/title-settings-widget.directive.js"></script>
+<script type="text/javascript" src="../js/directives/draggable.directive.js"></script>
+<script type="text/javascript" src="../js/directives/fixtext-widget.directive.js"></script>
+
 <script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/entry-type.service.js"></script>
 <script type="text/javascript" src="../js/services/treatment.service.js"></script>
@@ -91,6 +99,8 @@
 <script type="text/javascript" src="../js/services/locking.service.js"></script>
 <script type="text/javascript" src="../js/services/user.service.js"></script>
 <script type="text/javascript" src="../js/services/treatment-permission.service.js"></script>
+<script type="text/javascript" src="../js/services/widget-visibility.service.js"></script>
+
 <script type="text/javascript" src="../js/config/spinner.config.js"></script>
 <script type="text/javascript" src="../js/config/textAngular.config.js"></script>
 <script type="text/javascript" src="../js/independent.js"></script>
