added fixtext save. also made some css changes for a thinner layout

--- a/dev/index.html
+++ b/dev/index.html
@@ -90,6 +90,7 @@
 <script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/entry-type.service.js"></script>
 <script type="text/javascript" src="../js/services/treatment.service.js"></script>
+<script type="text/javascript" src="../js/services/treatment-row.service.js"></script>
 <script type="text/javascript" src="../js/services/subject.service.js"></script>
 <script type="text/javascript" src="../js/services/document.service.js"></script>
 <script type="text/javascript" src="../js/services/biometric.service.js"></script>
