--- a/dev/index.html
+++ b/dev/index.html
@@ -39,7 +39,7 @@
 
     <title-settings-widget></title-settings-widget>
 
-    <fixtext-widget></fixtext-widget>
+    <text-block-widget></text-block-widget>
 
     <treatment treatment="treatment" editable="{{$index<5}}"
                ng-repeat="treatment in vm.treatments | filter:vm.search | orderBy:[(vm.reverse?'':'-')+'date', 'id']"
@@ -85,7 +85,7 @@
 <script type="text/javascript" src="../js/directives/treatment-toolbar.directive.js"></script>
 <script type="text/javascript" src="../js/directives/title-settings-widget.directive.js"></script>
 <script type="text/javascript" src="../js/directives/draggable.directive.js"></script>
-<script type="text/javascript" src="../js/directives/fixtext-widget.directive.js"></script>
+<script type="text/javascript" src="../js/directives/textblock-widget.directive.js"></script>
 
 <script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/entry-type.service.js"></script>
@@ -101,6 +101,7 @@
 <script type="text/javascript" src="../js/services/user.service.js"></script>
 <script type="text/javascript" src="../js/services/treatment-permission.service.js"></script>
 <script type="text/javascript" src="../js/services/widget-visibility.service.js"></script>
+<script type="text/javascript" src="../js/services/textblock.service.js"></script>
 
 <script type="text/javascript" src="../js/config/spinner.config.js"></script>
 <script type="text/javascript" src="../js/config/textAngular.config.js"></script>
