added a generic keyboard focus directive

--- a/dev/index.html
+++ b/dev/index.html
@@ -87,6 +87,7 @@
 <script type="text/javascript" src="../js/directives/draggable.directive.js"></script>
 <script type="text/javascript" src="../js/directives/textblock-widget.directive.js"></script>
 <script type="text/javascript" src="../js/directives/type-and-preset.directive.js"></script>
+<script type="text/javascript" src="../js/directives/keyboard-focus.directive.js"></script>
 
 <script type="text/javascript" src="../js/services/biometric.service.js"></script>
 <script type="text/javascript" src="../js/services/catalog-entry.service.js"></script>
