some refactoring, also some dropdown styling

--- a/dev/index.html
+++ b/dev/index.html
@@ -89,12 +89,14 @@
 <script type="text/javascript" src="../js/directives/type-and-preset.directive.js"></script>
 <script type="text/javascript" src="../js/directives/keyboard-focus.directive.js"></script>
 
+<script type="text/javascript" src="../js/services/asterisk-search.service.js"></script>
 <script type="text/javascript" src="../js/services/biometric.service.js"></script>
 <script type="text/javascript" src="../js/services/catalog-entry.service.js"></script>
 <script type="text/javascript" src="../js/services/current-focus.service.js"></script>
 <script type="text/javascript" src="../js/services/disability.service.js"></script>
 <script type="text/javascript" src="../js/services/document.service.js"></script>
 <script type="text/javascript" src="../js/services/entry-type.service.js"></script>
+<script type="text/javascript" src="../js/services/gdt.service.js"></script>
 <script type="text/javascript" src="../js/services/laboratory.service.js"></script>
 <script type="text/javascript" src="../js/services/locking.service.js"></script>
 <script type="text/javascript" src="../js/services/preset.service.js"></script>
@@ -108,7 +110,6 @@
 <script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/user.service.js"></script>
 <script type="text/javascript" src="../js/services/widget-visibility.service.js"></script>
-<script type="text/javascript" src="../js/services/asterisk-search.service.js"></script>
 
 <script type="text/javascript" src="../js/config/spinner.config.js"></script>
 <script type="text/javascript" src="../js/config/textAngular.config.js"></script>
