added a preset settings widget, did some refactoring

--- a/dev/index.html
+++ b/dev/index.html
@@ -101,8 +101,6 @@
 <script type="text/javascript" src="../js/directives/textblock-widget.directive.js"></script>
 <script type="text/javascript" src="../js/directives/type-and-preset.directive.js"></script>
 <script type="text/javascript" src="../js/directives/keyboard-focus.directive.js"></script>
-<script type="text/javascript" src="../js/directives/create-preset-widget.directive.js"></script>
-<script type="text/javascript" src="../js/directives/preset-settings-widget.directive.js"></script>
 
 <script type="text/javascript" src="../js/services/advanced-search-widget.service.js"></script>
 <script type="text/javascript" src="../js/services/asterisk-search.service.js"></script>
@@ -115,7 +113,6 @@
 <script type="text/javascript" src="../js/services/gdt.service.js"></script>
 <script type="text/javascript" src="../js/services/laboratory.service.js"></script>
 <script type="text/javascript" src="../js/services/locking.service.js"></script>
-<script type="text/javascript" src="../js/services/preset.service.js"></script>
 <script type="text/javascript" src="../js/services/subject.service.js"></script>
 <script type="text/javascript" src="../js/services/treatment-permission.service.js"></script>
 <script type="text/javascript" src="../js/services/textblock.service.js"></script>
@@ -126,8 +123,12 @@
 <script type="text/javascript" src="../js/services/url.service.js"></script>
 <script type="text/javascript" src="../js/services/user.service.js"></script>
 <script type="text/javascript" src="../js/services/widget-visibility.service.js"></script>
-<script type="text/javascript" src="../js/services/create-preset-widget.service.js"></script>
-<script type="text/javascript" src="../js/services/preset-settings-widget.service.js"></script>
+
+<script type="text/javascript" src="../js/preset/preset.service.js"></script>
+<script type="text/javascript" src="../js/preset/create-preset-widget.directive.js"></script>
+<script type="text/javascript" src="../js/preset/create-preset-widget.service.js"></script>
+<script type="text/javascript" src="../js/preset/preset-settings-widget.directive.js"></script>
+<script type="text/javascript" src="../js/preset/preset-settings-widget.service.js"></script>
 
 <script type="text/javascript" src="../js/filters/compareDate.filter.js"></script>
 <script type="text/javascript" src="../js/filters/attachments.filter.js"></script>
