added deletion of presets

--- a/js/preset/preset-settings-widget.tpl.html
+++ b/js/preset/preset-settings-widget.tpl.html
@@ -21,7 +21,7 @@
                             <div class="btn-group">
                                 <a class="btn btn-default" href ng-click="preset.editable = true;" ng-hide="preset.editable"><i class="fa fa-edit"></i></a>
                                 <a class="btn btn-default" href ng-click="dc.rename(preset)" ng-show="preset.editable"><i class="fa fa-save"></i></a>
-                                <a class="btn btn-default"><i class="fa fa-remove"></i></a>
+                                <a class="btn btn-default" href ng-click="dc.remove(preset)"><i class="fa fa-remove"></i></a>
                             </div>
                         </div>
                     </div>
