added replacing of presets

--- a/js/preset/create-preset-widget.tpl.html
+++ b/js/preset/create-preset-widget.tpl.html
@@ -1,4 +1,4 @@
-<div class="create-preset-widget-wrapper" ng-show="dc.isVisible()">
+<div class="modal-wrapper" ng-show="dc.isVisible()">
     <div class="create-preset-widget achilles-widget" ng-cloak draggable
          draggable-handle=".panel-heading">
         <div class="panel panel-default">
