--- a/js/treatment/treatment.tpl.html
+++ b/js/treatment/treatment.tpl.html
@@ -59,6 +59,7 @@
             <li role="presentation" class="divider"></li>
             <li role="presentation">
                 <a href role="menuitem" ng-click="dc.createPreset(treatment)">Neue Struktur</a>
+                <a href role="menuitem" ng-click="dc.replacePreset(treatment)">Struktur ersetzen</a>
             </li>
         </ul>
     </div>
