--- a/dev/index.html
+++ b/dev/index.html
@@ -46,7 +46,10 @@
 
     <create-preset-widget></create-preset-widget>
 
+    <replace-preset-widget></replace-preset-widget>
+
     <preset-settings-widget></preset-settings-widget>
+
 
     <treatment treatment="treatment" editable="{{$index<5}}"
                ng-repeat="treatment in vm.treatments |
@@ -89,7 +92,7 @@
 <script type="text/javascript" src="../js/controllers/modal.controllers.js"></script>
 
 <script type="text/javascript" src="../js/directives/advanced-search-widget.directive.js"></script>
-<script type="text/javascript" src="../js/directives/treatment.directive.js"></script>
+<script type="text/javascript" src="../js/treatment/treatment.directive.js"></script>
 <script type="text/javascript" src="../js/directives/treatment-entry.directive.js"></script>
 <script type="text/javascript" src="../js/directives/treatment-row.directive.js"></script>
 <script type="text/javascript" src="../js/directives/treatment-column.directive.js"></script>
@@ -116,7 +119,7 @@
 <script type="text/javascript" src="../js/services/treatment-permission.service.js"></script>
 <script type="text/javascript" src="../js/services/textblock.service.js"></script>
 <script type="text/javascript" src="../js/services/textblock-widget.service.js"></script>
-<script type="text/javascript" src="../js/services/treatment.service.js"></script>
+<script type="text/javascript" src="../js/treatment/treatment.service.js"></script>
 <script type="text/javascript" src="../js/services/treatment-entry.service.js"></script>
 <script type="text/javascript" src="../js/services/treatment-row.service.js"></script>
 <script type="text/javascript" src="../js/services/url.service.js"></script>
@@ -128,6 +131,8 @@
 <script type="text/javascript" src="../js/preset/create-preset-widget.service.js"></script>
 <script type="text/javascript" src="../js/preset/preset-settings-widget.directive.js"></script>
 <script type="text/javascript" src="../js/preset/preset-settings-widget.service.js"></script>
+<script type="text/javascript" src="../js/preset/replace-preset-widget.directive.js"></script>
+<script type="text/javascript" src="../js/preset/replace-preset-widget.service.js"></script>
 
 <script type="text/javascript" src="../js/filters/compareDate.filter.js"></script>
 <script type="text/javascript" src="../js/filters/attachments.filter.js"></script>
