added new build

--- a/html/index.html
+++ b/html/index.html
@@ -46,6 +46,8 @@
 
     <create-preset-widget></create-preset-widget>
 
+    <replace-preset-widget></replace-preset-widget>
+
     <preset-settings-widget></preset-settings-widget>
 
     <treatment treatment="treatment" editable="{{$index<5}}"
