added a limit to the number of treatments displayed

--- a/dev/index.html
+++ b/dev/index.html
@@ -52,12 +52,13 @@
 
 
     <treatment treatment="treatment" editable="{{$index<5}}"
-               ng-repeat="treatment in vm.treatments |
+               ng-repeat="treatment in vm.filteredTreatments = (vm.treatments |
                             filter:vm.search.text |
                             compareDate:vm.search.dateFrom:'after' |
                             compareDate:vm.search.dateTo:'before' |
                             attachments:vm.search.attachments |
-                            orderBy:[(vm.reverse?'':'-')+'date', 'id']"
+                            orderBy:[(vm.reverse?'':'-')+'date', 'id'] |
+                            limitTo:8)"
                treatmentlist="vm.treatments" user="vm.user"></treatment>
 </div>
 
