--- a/js/treatment/treatment.tpl.html
+++ b/js/treatment/treatment.tpl.html
@@ -274,7 +274,7 @@
                         <div class="col-xs-12">
                             <div class="type-and-preset-list" ng-show="active">
                                 <div class="list-group">
-                                    <h5 class="list-group-item entry-type">Typen</h5>
+                                    <h5 class="list-group-item entry-type">Behandlungstitel</h5>
                                     <a tabindex href
                                        ng-click="dc.addEntry(treatment.id, type, treatment.entries); search.term=''"
                                        ng-repeat="type in dc.types | filter:search.term"
